# gpui-template

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md
.cargo/: config.toml
.codex/: config.toml
.refactor-radar/: config.toml
.zed/: settings.json
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/error/: app_error.rs  app_result.rs  error.rs  mod.rs  result.rs
crates/app/src/theme/: mod.rs
crates/app/src/windows/: main_window.rs  mod.rs
crates/components/tree-view/: Cargo.toml
crates/components/tree-view/src/: icons.rs  item.rs  item_kind.rs  lib.rs  row.rs  tree_view.rs
crates/components/tree-view/src/tests/: tree_view.rs
crates/hotkey-hold-app/: Cargo.toml  DEV.md  README.md
crates/hotkey-hold-app/data/: dev.gpui.HotkeyHoldApp.desktop
crates/hotkey-hold-app/src/: error.rs  hotkey.rs  icon.rs  main.rs
crates/hotkey-hold-app/src/error/: app_error.rs  app_result.rs  mod.rs
crates/hotkey-hold-app/src/hotkey/: backend_kind.rs  controller.rs  event.rs  global_runtime.rs  mod.rs  native.rs  runtime.rs  runtime_event.rs  snapshot.rs  wayland.rs  wayland_runtime.rs
crates/hotkey-hold-app/src/windows/: hotkey_window.rs  main_window.rs  mod.rs  resize.rs
crates/tree-view-app/: Cargo.toml
crates/tree-view-app/src/: main.rs
