[workspace]
members = [
    "crates/app",
    "crates/components/tree-view",
    "crates/tree-view-app"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
error-location        = { version = "0.1.0" }
gpui                  = { version = "0.2.2" }
gpui-component        = { version = "0.5.1" }
gpui-component-assets = { version = "0.5.1" }
thiserror             = { version = "2.0.18" }
tree-view             = { path = "crates/components/tree-view" }

[workspace.lints.clippy]
unwrap_used           = "deny"
expect_used           = "deny"
panic                 = "deny"

[workspace.lints.rust]
unused_must_use       = "deny"
