[workspace]
members = [
    "crates/app",
    "crates/components/tree-view",
    "crates/hotkey-hold-app",
    "crates/tree-view-app"
]
exclude = [
    "submodules/zed",
    "submodules/gpui-component"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow                = { version = "1.0.102" }
ashpd                 = { version = "0.13.11", default-features = false, features = ["async-io", "global_shortcuts"] }
async-channel         = { version = "2.5.0" }
error-location        = { version = "0.1.0" }
futures-util          = { version = "0.3.32" }
global-hotkey         = { version = "0.8.0" }
gpui                  = { path = "submodules/zed/crates/gpui" }
gpui-component        = { path = "submodules/gpui-component/crates/ui" }
gpui-component-assets = { path = "submodules/gpui-component/crates/assets" }
gpui-component-macros = { path = "submodules/gpui-component/crates/macros" }
gpui_platform         = { path = "submodules/zed/crates/gpui_platform", features = ["font-kit", "wayland", "x11"] }
image                 = { version = "0.25.1" }
pollster              = { version = "0.4.0" }
thiserror             = { version = "2.0.18" }

# Components
tree-view             = { path = "crates/components/tree-view" }

[workspace.lints.clippy]
unwrap_used           = "deny"
expect_used           = "deny"
panic                 = "deny"

[workspace.lints.rust]
unused_must_use       = "deny"

[patch."https://github.com/zed-industries/zed"]
gpui = { path = "submodules/zed/crates/gpui" }
