[package]
name = "app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "template-app"
path = "src/main.rs"

[dependencies]
gpui                  = { workspace = true }
gpui_platform         = { workspace = true }
gpui-component        = { workspace = true }
gpui-component-assets = { workspace = true }
