[package]
name = "app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "template-app"
path = "src/main.rs"

[dependencies]
anyhow                = { workspace = true }
error-location        = { workspace = true }
gpui                  = { workspace = true }
gpui-component        = { workspace = true }
gpui-component-assets = { workspace = true }
gpui_platform         = { workspace = true }
thiserror             = { workspace = true }

[lints]
workspace             = true
