[package]
name = "tree-view-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tree-view-app"
path = "src/main.rs"

[dependencies]
gpui                  = { workspace = true }
gpui-component        = { workspace = true }
gpui-component-assets = { workspace = true }
tree-view             = { workspace = true }

[lints]
workspace             = true
